MAPREDUCE-665. Move libhdfs to HDFS subproject. (Eli Collins via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@833988 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -72,6 +72,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1128. Fix MRUnit to prohibit iterating over values twice. (Aaron
     Kimball via cdouglas)
 
+    MAPREDUCE-665. Move libhdfs to HDFS subproject. (Eli Collins via dhruba)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
