MAPREDUCE-1178. Fix ClassCastException in MultipleInputs by adding a DelegatingRecordReader. Contributed by Amareshwari Sriramadasu and Jay Booth.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@833990 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -868,3 +868,7 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1177. Correct setup/cleanup inversion in
     JobTracker::getTaskReports. (Vinod Kumar Vavilapalli via cdouglas)
+
+    MAPREDUCE-1178. Fix ClassCastException in MultipleInputs by adding 
+    a DelegatingRecordReader. (Amareshwari Sriramadasu and Jay Booth 
+    via sharad)
