MAPREDUCE-1196. Fix FileOutputCommitter to use the deprecated cleanupJob api correctly.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@834284 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -74,6 +74,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-665. Move libhdfs to HDFS subproject. (Eli Collins via dhruba)
 
+    MAPREDUCE-1196. Fix FileOutputCommitter to use the deprecated cleanupJob
+    api correctly. (acmurthy)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
