MAPREDUCE-1068. Fix streaming job to show proper message if file is is not present. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@835237 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -875,3 +875,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1178. Fix ClassCastException in MultipleInputs by adding 
     a DelegatingRecordReader. (Amareshwari Sriramadasu and Jay Booth 
     via sharad)
+
+    MAPREDUCE-1068. Fix streaming job to show proper message if file is 
+    is not present. (Amareshwari Sriramadasu via sharad)
