MAPREDUCE-1189. Reduce ivy console output to ovservable level. Contributed by Konstantin Boudnik
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@835964 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -36,6 +36,8 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1036. Document Sqoop API. (Aaron Kimball via cdouglas)
 
+    MAPREDUCE-1189. Reduce ivy console output to ovservable level (cos)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
