--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -885,3 +885,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1068. Fix streaming job to show proper message if file is 
     is not present. (Amareshwari Sriramadasu via sharad)
+
+    MAPREDUCE-1147. Add map output counters to new API. (Amar Kamat via
+    cdouglas)
