MAPREDUCE-1167. ProcfsBasedProcessTree collects rss memory information. (Scott Chen via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@881485 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -38,6 +38,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1189. Reduce ivy console output to ovservable level (cos)
 
+    MAPREDUCE-1167. ProcfsBasedProcessTree collects rss memory information.
+    (Scott Chen via dhruba)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
