MAPREDUCE-915. The debug scripts are run as the job user. Contributed by Devaraj Das.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@881536 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -891,3 +891,5 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1147. Add map output counters to new API. (Amar Kamat via
     cdouglas)
+
+    MAPREDUCE-915. The debug scripts are run as the job user. (ddas)
