--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    MAPREDUCE-1198. Alternatively schedule different types of tasks in
+    fair share scheduler. (Scott Chen via matei)
+
     MAPREDUCE-707. Provide a jobconf property for explicitly assigning a job to 
     a pool in the Fair Scheduler. (Alan Heirich via matei)
 
