MAPREDUCE-1169. Improvements to mysqldump use in Sqoop. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@883452 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1167. ProcfsBasedProcessTree collects rss memory information.
     (Scott Chen via dhruba)
 
+    MAPREDUCE-1169. Improvements to mysqldump use in Sqoop.
+    (Aaron Kimball via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
