HADOOP-5107. Use Maven ant tasks to publish artifacts. (Giridharan Kesavan via omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@883594 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -522,6 +522,9 @@ Release 0.21.0 - Unreleased
     HDFS-641. Move all of the components that depend on map/reduce to 
     map/reduce. (omalley)
 
+    HADOOP-5107. Use Maven ant tasks to publish artifacts. (Giridharan Kesavan
+    via omalley)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
