MAPREDUCE-28. Refactor TestQueueManager and fix default ACLs. Contributed by V.V.Chaitanya Krishna and Rahul K Singh.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@883621 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -910,3 +910,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1007. Fix NPE in CapacityTaskScheduler.getJobs(). 
     (V.V.Chaitanya Krishna via sharad)
 
+    MAPREDUCE-28. Refactor TestQueueManager and fix default ACLs.
+    (V.V.Chaitanya Krishna and Rahul K Singh via sharad)
+
