MAPREDUCE-1182. Fix overflow in reduce causing allocations to exceed the configured threshold.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@884288 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -913,3 +913,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-28. Refactor TestQueueManager and fix default ACLs.
     (V.V.Chaitanya Krishna and Rahul K Singh via sharad)
 
+    MAPREDUCE-1182. Fix overflow in reduce causing allocations to exceed the
+    configured threshold. (cdouglas)
+
