MAPREDUCE-1244. Fix eclipse-plugin's build dependencies.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@884469 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -95,6 +95,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1239. Fix contrib components build dependencies. 
     (Giridharan Kesavan and Owen O'Malley) 
 
+    MAPREDUCE-1244. Fix eclipse-plugin's build dependencies. (gkesavan)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
