MAPREDUCE-787. Fix JobSubmitter to honor user given symlink path. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@884832 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -921,3 +921,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1239. Fix contrib components build dependencies. 
     (Giridharan Kesavan and omalley) 
 
+    MAPREDUCE-787. Fix JobSubmitter to honor user given symlink path.
+    (Amareshwari Sriramadasu via sharad)
+
