MAPREDUCE-1140. Fix DistributedCache to not decrement reference counts for unreferenced files in error conditions. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@885373 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -94,6 +94,10 @@ Trunk (unreleased changes)
    
     MAPREDUCE-1244. Fix eclipse-plugin's build dependencies. (gkesavan)
 
+    MAPREDUCE-1140. Fix DistributedCache to not decrement reference counts for
+    unreferenced files in error conditions.
+    (Amareshwari Sriramadasu via yhemanth)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
