--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1169. Improvements to mysqldump use in Sqoop.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1231. Added a new DistCp option, -skipcrccheck, so that the CRC
+    check during setup can be skipped.  (Jothi Padmanabhan via szetszwo)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
