MAPREDUCE-1190. Add package documentation for BBP example. Contributed by Tsz Wo (Nicholas) Sze
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@886058 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1231. Added a new DistCp option, -skipcrccheck, so that the CRC
     check during setup can be skipped.  (Jothi Padmanabhan via szetszwo)
 
+    MAPREDUCE-1190. Add package documentation for BBP example.
+    (Tsz Wo (Nicholas) Sze via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
