MAPREDUCE-1245. Fix TestFairScheduler failures by instantiating lightweight Jobtracker. Contributed by Sharad Agarwal.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@886059 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -104,6 +104,9 @@ Trunk (unreleased changes)
     unreferenced files in error conditions.
     (Amareshwari Sriramadasu via yhemanth)
 
+    MAPREDUCE-1245. Fix TestFairScheduler failures by instantiating lightweight
+    Jobtracker. (sharad)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
