MAPREDUCE-1260. Update Eclipse configuration to match changes to Ivy configuration. Contributed by Edwin Chan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@886353 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -107,6 +107,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1245. Fix TestFairScheduler failures by instantiating lightweight
     Jobtracker. (sharad)
 
+    MAPREDUCE-1260. Update Eclipse configuration to match changes to Ivy
+    configuration. (Edwin Chan via cos)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
