MAPREDUCE-1119. When tasks fail to report status, show tasks's stack dump before killing. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@887061 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -57,6 +57,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1190. Add package documentation for BBP example.
     (Tsz Wo (Nicholas) Sze via cdouglas)
 
+    MAPREDUCE-1119. When tasks fail to report status, show tasks's stack dump
+    before killing. (Aaron Kimball via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
