--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -113,6 +113,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1260. Update Eclipse configuration to match changes to Ivy
     configuration. (Edwin Chan via cos)
 
+    MAPREDUCE-1152. Distinguish between failed and killed tasks in
+    JobTrackerInstrumentation. (Sharad Agarwal via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
