MAPREDUCE-1161. Remove ineffective synchronization in NotificationTestCase. Contributed by Owen O'Malley
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@887135 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -951,3 +951,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1249. Update config default value for socket read timeout to
     match code default. (Amareshwari Sriramadasu via cdouglas)
+
+    MAPREDUCE-1161. Remove ineffective synchronization in NotificationTestCase.
+    (Owen O'Malley via cdouglas)
