MAPREDUCE-1185. Redirect running job url to history url if job is already retired. Contributed by Amareshwari Sriramadasu and Sharad Agarwal.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@887844 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -60,6 +60,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1119. When tasks fail to report status, show tasks's stack dump
     before killing. (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1185. Redirect running job url to history url if job is already 
+    retired. (Amareshwari Sriramadasu and Sharad Agarwal via sharad)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
