Mapreduce-1244. Fix changes.txt for 21.0 branch
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@888269 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -961,6 +961,8 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1161. Remove ineffective synchronization in NotificationTestCase.
     (Owen O'Malley via cdouglas)
 
+    MAPREDUCE-1244. Fix eclipse-plugin's build dependencies. (gkesavan)
+
     MAPREDUCE-1075. Fix JobTracker to not throw an NPE for a non-existent
     queue. (V.V.Chaitanya Krishna via yhemanth)
 
