MAPREDUCE-754. Fix NPE in expiry thread when a TT is lost. Contributed by Amar Kamat.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@888431 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -966,3 +966,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1075. Fix JobTracker to not throw an NPE for a non-existent
     queue. (V.V.Chaitanya Krishna via yhemanth)
 
+    MAPREDUCE-754. Fix NPE in expiry thread when a TT is lost. (Amar Kamat 
+    via sharad)
+
