MAPREDUCE-1074. Document Reducer mark/reset functionality. Contributed by Jothi Padmanabhan
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@888742 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -969,3 +969,5 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-754. Fix NPE in expiry thread when a TT is lost. (Amar Kamat 
     via sharad)
 
+    MAPREDUCE-1074. Document Reducer mark/reset functionality. (Jothi
+    Padmanabhan via cdouglas)
