MAPREDUCE-1267. Fix typo in mapred-default.xml. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@888746 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -971,3 +971,5 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1074. Document Reducer mark/reset functionality. (Jothi
     Padmanabhan via cdouglas)
+
+    MAPREDUCE-1267. Fix typo in mapred-default.xml. (Todd Lipcon via cdouglas)
