--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -973,3 +973,6 @@ Release 0.21.0 - Unreleased
     Padmanabhan via cdouglas)
 
     MAPREDUCE-1267. Fix typo in mapred-default.xml. (Todd Lipcon via cdouglas)
+
+    MAPREDUCE-952. Remove inadvertently reintroduced Task.Counter enum. (Jothi
+    Padmanabhan via cdouglas)
