MAPREDUCE-1230. Fix handling of null records in VerticaInputFormat. Contributed by Omer Trajman
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@888761 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -976,3 +976,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-952. Remove inadvertently reintroduced Task.Counter enum. (Jothi
     Padmanabhan via cdouglas)
+
+    MAPREDUCE-1230. Fix handling of null records in VerticaInputFormat. (Omer
+    Trajman via cdouglas)
