MAPREDUCE-1050. Introduce a mock object testing framework.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@889085 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -66,6 +66,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1185. Redirect running job url to history url if job is already 
     retired. (Amareshwari Sriramadasu and Sharad Agarwal via sharad)
 
+    MAPREDUCE-1050. Introduce a mock object testing framework. (tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
