MAPREDUCE-879. Fix broken unit test TestTaskTrackerLocalization on MacOS. Contributed by Sreekanth Ramakrishnan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@889571 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -989,3 +989,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1171. Allow shuffle retries and read-error reporting to be
     configurable. (Amareshwari Sriramadasu via acmurthy)
 
+    MAPREDUCE-879. Fix broken unit test TestTaskTrackerLocalization on MacOS.
+    (Sreekanth Ramakrishnan via yhemanth)
+
