MAPREDUCE-1124. Fix imprecise byte counts in Gridmix.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@889778 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -992,3 +992,4 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-879. Fix broken unit test TestTaskTrackerLocalization on MacOS.
     (Sreekanth Ramakrishnan via yhemanth)
 
+    MAPREDUCE-1124. Fix imprecise byte counts in Gridmix. (cdouglas)
