--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -993,3 +993,6 @@ Release 0.21.0 - Unreleased
     (Sreekanth Ramakrishnan via yhemanth)
 
     MAPREDUCE-1124. Fix imprecise byte counts in Gridmix. (cdouglas)
+
+    MAPREDUCE-1222. Add an option to exclude numeric IP addresses in topologies
+    processed by Mumak. (Hong Tang via cdouglas)
