MAPREDUCE-1209. Move common specific part of the test TestReflectionUtils out of mapred into common. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@890593 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -71,6 +71,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1084. Implementing aspects development and fault injeciton
     framework for MapReduce. (Sreekanth Ramakrishnan via cos)
 
+    MAPREDUCE-1209. Move common specific part of the test TestReflectionUtils
+    out of mapred into common. (Todd Lipcon via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
