--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -137,6 +137,8 @@ Trunk (unreleased changes)
     parameter instead of using FileStatus.class.  (Peter Romianowski via
     szetszwo)
 
+    MAPREDUCE-1251. c++ utils doesn't compile. (Eli Collins via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
