MAPREDUCE-1294. Build fails to pull latest hadoop-core-* artifacts. Contributed by Konstantin Boudnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@891111 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -145,6 +145,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1148. SQL identifiers are a superset of Java identifiers.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1294. Build fails to pull latest hadoop-core-* artifacts (cos)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
