MAPREDUCE-1213. TaskTrackers restart is faster because it deletes distributed cache directory asynchronously. (Zheng Shao via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@891524 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -147,6 +147,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1294. Build fails to pull latest hadoop-core-* artifacts (cos)
 
+    MAPREDUCE-1213. TaskTrackers restart is faster because it deletes
+    distributed cache directory asynchronously. (Zheng Shao via dhruba)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
