MAPREDUCE-698. Per-pool task limits for the fair scheduler. Contributed by Kevin Peterson.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@892117 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,9 @@ Trunk (unreleased changes)
 
   NEW FEATURES
 
+    MAPREDUCE-698. Per-pool task limits for the fair scheduler.
+    (Kevin Peterson via matei)
+
     MAPREDUCE-1017. Compression and output splitting for Sqoop.
     (Aaron Kimball via tomwhite)
 
