MAPREDUCE-1083. Changes in MapReduce so that group information of users can be refreshed in the JobTracker via command line. Contributed by Boris Shkolnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@892411 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -80,6 +80,10 @@ Trunk (unreleased changes)
     MAPREDUCE-967. TaskTracker does not need to fully unjar job jars.
     (Todd Lipcon via tomwhite)
 
+    MAPREDUCE-1083. Changes in MapReduce so that group information of users 
+    can be refreshed in the JobTracker via command line. 
+    (Boris Shkolnik via ddas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
