MAPREDUCE-1258. Fix fair scheduler event log not logging job info.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@892479 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -96,6 +96,9 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    MAPREDUCE-1258. Fix fair scheduler event log not logging job info.
+    (matei)
+
     MAPREDUCE-1089. Fix NPE in fair scheduler preemption when tasks are
     scheduled but not running. (Todd Lipcon via matei)
 
