MAPREDUCE-181. Changes the job submission process to be secure. Contributed by Devaraj Das.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@892893 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -84,6 +84,9 @@ Trunk (unreleased changes)
     can be refreshed in the JobTracker via command line. 
     (Boris Shkolnik via ddas)
 
+    MAPREDUCE-181. Changes the job submission process to be secure.
+    (Devaraj Das)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
