--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -172,6 +172,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1265. The task attempt error log prints the name of the 
     tasktracker machine. (Scott Chen via dhruba)
 
+    MAPREDUCE-1201. ProcfsBasedProcessTree collects CPU usage information.
+    (Scott Chen via dhruba)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
