MAPREDUCE-1250. Refactors the JobToken to use Common's Token interface. Contributed by Kan Zhang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@893055 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -87,6 +87,9 @@ Trunk (unreleased changes)
     MAPREDUCE-181. Changes the job submission process to be secure.
     (Devaraj Das)
 
+    MAPREDUCE-1250. Refactors the JobToken to use Common's Token interface.
+    (Kan Zhang via ddas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
