MAPREDUCE-1326. fi tests don't use fi-site.xml. Contributed by Konstantin Boudnik
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@893361 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -178,6 +178,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1201. ProcfsBasedProcessTree collects CPU usage information.
     (Scott Chen via dhruba)
 
+    MAPREDUCE-1326. fi tests don't use fi-site.xml (cos)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
