MAPREDUCE-1241. Use a default queue configuration in JobTracker when mapred-queues.xml is unavailable. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@893397 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1056,3 +1056,5 @@ Release 0.21.0 - Unreleased
     when speculative attempts are running for a TIP.
     (Rahul Kumar Singh via yhemanth)
 
+    MAPREDUCE-1241. Use a default queue configuration in JobTracker when
+    mapred-queues.xml is unavailable. (Todd Lipcon via cdouglas)
