MAPREDUCE-1165. Replace non-portable function name with C99 equivalent. Contributed by Allen Wittenauer
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@893409 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -183,6 +183,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1235. Fix a MySQL timestamp incompatibility in Sqoop. (Aaron
     Kimball via cdouglas)
 
+    MAPREDUCE-1165. Replace non-portable function name with C99 equivalent.
+    (Allen Wittenauer via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
