MAPREDUCE-1059. Use distcp.bytes.per.map when adding sync markers in distcp. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@893455 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1070,3 +1070,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1286. Remove quoting from client opts in TaskRunner. (Yuri
     Pradkin via cdouglas)
+
+    MAPREDUCE-1059. Use distcp.bytes.per.map when adding sync markers in
+    distcp. (Aaron Kimball via cdouglas)
