MAPREDUCE-1009. Update forrest documentation describing hierarchical queues. Contributed by Vinod Kumar Vavilapalli.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@893469 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1073,3 +1073,7 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1059. Use distcp.bytes.per.map when adding sync markers in
     distcp. (Aaron Kimball via cdouglas)
+
+    MAPREDUCE-1009. Update forrest documentation describing hierarchical
+    queues. (Vinod Kumar Vavilapalli via yhemanth)
+
