MAPREDUCE-1331. Fixes a typo in a testcase. Contributed by Devaraj Das.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@893800 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -186,6 +186,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1165. Replace non-portable function name with C99 equivalent.
     (Allen Wittenauer via cdouglas)
 
+    MAPREDUCE-1331. Fixes a typo in a testcase (Devaraj Das)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
