MAPREDUCE-744. Introduces the notion of a public distributed cache. Contributed by Devaraj Das.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@893828 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1168. Export data to databases via Sqoop. (Aaron Kimball via
     tomwhite)
 
+    MAPREDUCE-744. Introduces the notion of a public distributed cache.
+    (Devaraj Das)
+
   IMPROVEMENTS
 
     MAPREDUCE-1198. Alternatively schedule different types of tasks in
