MAPREDUCE-1293. AutoInputFormat doesn't work with non-default FileSystems. Contributed by Andrew Hitchcock.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@894962 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -195,6 +195,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1331. Fixes a typo in a testcase (Devaraj Das)
 
+    MAPREDUCE-1293. AutoInputFormat doesn't work with non-default FileSystems.
+    (Andrew Hitchcock via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
