--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -198,6 +198,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1293. AutoInputFormat doesn't work with non-default FileSystems.
     (Andrew Hitchcock via tomwhite)
 
+    MAPREDUCE-1131. Using profilers other than hprof can cause JobClient to
+    report job failure. (Aaron Kimball via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
