MAPREDUCE-372. Change org.apache.hadoop.mapred.lib.ChainMapper/Reducer to use new mapreduce api. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@896750 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -97,6 +97,9 @@ Trunk (unreleased changes)
     been created by user tasks with non-writable permissions.
     (Ravi Gummadi via yhemanth)
 
+    MAPREDUCE-372. Change org.apache.hadoop.mapred.lib.ChainMapper/Reducer 
+    to use new mapreduce api. (Amareshwari Sriramadasu via sharad)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
